...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_edit_estate_title"
                    android:hint="@string/estate_title"
                    android:singleLine="true"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_edit_estate_country"
                        android:hint="@string/estate_country"
                        android:singleLine="true"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_edit_estate_city"
                        android:hint="@string/estate_city"
                        android:singleLine="true"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_edit_estate_zip"
                        android:hint="@string/estate_zip"
                        android:inputType="number"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_edit_estate_address"
                    android:hint="@string/estate_address"
                    android:singleLine="true"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_edit_estate_area"
                    android:hint="@string/estate_area"
                    android:inputType="number"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_edit_estate_price"
                    android:hint="@string/estate_price"
                    android:inputType="number"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_edit_estate_nbRooms"
                    android:hint="@string/estate_rooms"
                    android:inputType="number"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_edit_estate_nbBedrooms"
                    android:hint="@string/estate_bedrooms"
                    android:inputType="number"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_edit_estate_nbBathrooms"
                    android:hint="@string/estate_bathrooms"
                    android:inputType="number"
...

            <CheckBox
                android:id="@+id/add_edit_estate_check_park"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                android:text="@string/estate_park"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/add_edit_estate_check_school"
                app:layout_constraintTop_toBottomOf="@id/add_edit_estate_nbRooms_layout"/>

...
                android:text="@string/estate_school"
                app:layout_constraintStart_toEndOf="@id/add_edit_estate_check_park"
                app:layout_constraintEnd_toStartOf="@id/add_edit_estate_check_shop"
                app:layout_constraintTop_toBottomOf="@id/add_edit_estate_nbBedrooms_layout"/>

...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_edit_estate_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_edit_estate_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
