...
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/search_estate_type_layout"
        app:layout_constraintStart_toEndOf="@id/search_estate_country_layout"
        app:layout_constraintEnd_toStartOf="@id/search_estate_zip_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_estate_city"
            android:hint="@string/estate_city"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintHorizontal_weight="1"/>

...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/search_dialog_reset"
        app:layout_constraintTop_toBottomOf="@id/search_estate_date_in_sale_since_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_estate_search"/>

    <Button
        android:id="@+id/search_estate_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
...
